<resources>
    <string name="app_name">EcommerceBottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_chat">Chat</string>
    <string name="title_cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_product">Title_Product</string>
    <string name="title_add_to_cart">title_add_to_cart</string>
    <string name="This_is_Cart_Fragment">This is Cart Fragment</string>
    <string name="text_welcome">Welcome!</string>
    <string name="wedding">Wedding</string>
    <string name="gift">Gift</string>
    <string name="decor">Decor</string>
    <string name="need_help">Need help?</string>
    <string name="make_an_appointment_or_chat_with_us">Make an appointment or chat with us.</string>
    <string name="all">All</string>
    <string name="table">Table</string>
    <string name="aisle">Aisle</string>
    <string name="accessories">Accessories</string>
    <string name="popularity">Popularity</string>
    <string name="prize">Prize</string>
    <string name="title">Title</string>
    <string name="florist">FLORIST</string>
    <string name="bridel_bouquet">Bridel Bouquet</string>
    <string name="catalog">Catalog</string>
    <string name="availability">Availability</string>
    <string name="in_stock">In Stock</string>
    <string name="rating">Rating</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="bouquet">Bouquet</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
</resources>