<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.catalog.ProductFragment">

    <ImageView
        android:id="@+id/img_rcv_id"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:src="@drawable/flower_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/baseline_cancel_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:ems="5"
        android:gravity="center_vertical"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_rcv_id" />

    <TextView
        android:id="@+id/text_price1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/price"
        android:textColor="@color/purple"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_rcv_id" />


    <TextView
        android:id="@+id/tv_availability"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/availability"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_in_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/in_stock"
        android:textColor="@color/green"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_availability" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="234dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:numStars="5"
        android:progressBackgroundTint="@color/gray"
        android:progressTint="@color/yellow"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:stepSize="1"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_availability"
        tools:layout_editor_absoluteY="400dp" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"

        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rating" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quantity" />

    <com.desire.ecommercebottomnav.widget.CustomNumberCounterView
        android:id="@+id/customCounterView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_total"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        app:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_price_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/total_price"
        android:textColor="@color/purple"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quantity" />

    <Button
        android:id="@+id/btn_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_price_total" />



</androidx.constraintlayout.widget.ConstraintLayout>