<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/florist"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_welcome"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:text="@string/text_welcome"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/baseline_person_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_welcome"
        android:background="@color/gray"
        app:tabBackground="@drawable/tab_selected_state"
        app:tabTextColor="@color/black"
        app:tabIndicator="@color/gray"
        app:tabIndicatorColor="@color/black"
        app:tabSelectedTextColor="@color/white"
        android:layout_marginTop="15dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wedding"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Decor"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gift"
            />


    </com.google.android.material.tabs.TabLayout>

   <androidx.constraintlayout.widget.ConstraintLayout

       android:id="@+id/cl_appointment"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="30dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/tabView"
       android:background="@drawable/textframe">

       <TextView
           android:id="@+id/tv_need_help"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/need_help"
           android:textSize="30sp"
           android:textColor="@color/white"
           android:padding="10dp"
           android:layout_marginStart="20dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>

       <TextView
           android:id="@+id/tv_appoiment"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/make_an_appointment_or_chat_with_us"
           android:textSize="12sp"
           android:textColor="@color/white"
           android:padding="10dp"
           android:layout_marginStart="20dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/tv_need_help"
           />
       <ImageView
           android:id="@+id/iv_calander"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:src="@drawable/baseline_calendar_month_24"
           android:layout_marginEnd="20dp"/>

   </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_flower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_appointment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/ll_all"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_view_comfy_alt_24" />

                <TextView
                    android:id="@+id/tv_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/all"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bouquet"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_bouquet"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flower_img" />

                <TextView
                    android:id="@+id/tv_bouquet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bouquet"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_table"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_table"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flower_img_1" />

                <TextView
                    android:id="@+id/tv_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/table"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_aisle"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_aisle"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flower_img_2"/>
                <TextView
                    android:id="@+id/tv_asile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/aisle"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_accessories"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_accessories"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:src="@drawable/flower_img_3" />

                <TextView
                    android:id="@+id/tv_accessories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/accessories"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_flower"
        android:text="@string/popularity"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_popularity"
        tools:listitem="@layout/rcv_list">

    </androidx.recyclerview.widget.RecyclerView>



</androidx.constraintlayout.widget.ConstraintLayout>